--- a/pages/stylesheets/stylesheet.css
+++ b/pages/stylesheets/stylesheet.css
@@ -1,3 +1,15 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
 /* HTML5 display-role reset for older browsers */
  article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
@@ -23,7 +35,7 @@ table {
  body {
     font-size: 15px;
     line-height: 1.5;
-    background: #fafafa url(../assets/body-bg.jpg) 0 0 repeat;
+    background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
     font-family:'Helvetica Neue', Helvetica, Arial, serif;
     font-weight: 400;
     color: #666;
@@ -38,10 +50,8 @@ header {
     padding-top: 40px;
     padding-bottom: 40px;
     font-family:'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-    background: #2e7bcf url(../assets/header-bg.jpg) 0 0 repeat-x;
+    background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
     border-bottom: solid 1px #275da1;
-		height: auto;
-		margin-bottom: 10px;
 }
 header h1 {
     letter-spacing: -1px;
@@ -82,7 +92,7 @@ aside#sidebar {
     padding-left: 20px;
     min-height: 504px;
     float: right;
-    background: transparent url(../assets/sidebar-bg.jpg) 0 0 no-repeat;
+    background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
     font-size: 12px;
     line-height: 1.3;
 }
@@ -110,13 +120,13 @@ header a.gh-button {
     position: absolute;
     right: 0;
     top: 0;
-    background: transparent url(../assets/github-button.png) 0 0 no-repeat;
+    background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
 aside a.gh-button {
     width: 138px;
     padding-left: 64px;
     display: block;
-    background: transparent url(../assets/download-button.png) 0 0 no-repeat;
+    background: transparent url(../images/download-button.png) 0 0 no-repeat;
     margin-bottom: 20px;
     font-size: 21px;
 }
@@ -154,6 +164,7 @@ ul, ol, dl {
     margin-top: 1em;
     padding-bottom: 1em;
     border: none;
+    background: transparent url('../images/hr.png') 0 0 no-repeat;
 }
 table {
     width: 100%;
@@ -272,6 +283,7 @@ dl dd {
     font-weight: 100;
 }
 footer {
+    background: transparent url('../images/hr.png') 0 0 no-repeat;
     margin-top: 40px;
     padding-top: 20px;
     padding-bottom: 10px;
@@ -394,13 +406,6 @@ footer a:hover {
 		a.option[disabled] {
     	opacity: 0.5;
 		}
-}
-
-.custom-trigger {
-	padding: 0.75em;
-	margin-top: 1.5em;
-	border: 1px solid #ccc;
-	cursor: pointer;
 }
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
  @media only screen and (min-width: 480px) and (max-width: 767px) {
